apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: halo-ingress
  namespace: halo-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: halo-admin-service
                port:
                  number: 8090
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: halo-admin-service
                port:
                  number: 8090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: halo-server-service
                port:
                  number: 8090
